--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,5 @@ before_script:
 script:
     - ./.travis.gofmt.sh
     - go test ./...
-    - mkdir stage
-    - cd stage
-    - ../bootstrap.bash
-    - ./blueprint.bash
-    - diff -us ../build.ninja.in .minibootstrap/build.ninja.in
-    - ../tests/test.sh
-    - ../tests/test_tree_tests.sh
+    - ./tests/test.sh
+    - ./tests/test_tree_tests.sh
