Workaround gimme not setting GOROOT
This appears to be fixed in gimme 1.2.0, but that's not available in
Travis yet (even in the latest trusty images). This is the gimme change
to always set GOROOT:

https://github.com/travis-ci/gimme/commit/913dd17ff3c853e2fe31f58f4487c078a8b83f7a

Change-Id: Ic9024b4bbbf5c75ed162a03fe119e4db9a1cdbba

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_script:
     - source .travis.fix-fork.sh
 
 script:
+    - export GOROOT=$(go env GOROOT)
     - ./.travis.gofmt.sh
     - go test ./...
     - ./tests/test.sh
