travis: run short tests with race detector enabled
Change-Id: I333d01547c4b8061fcc45b5079e97fa617cf0878

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ script:
     - export GOROOT=$(go env GOROOT)
     - ./.travis.gofmt.sh
     - go test ./...
+    - go test -race -short ./...
     - ./tests/test.sh
     - ./tests/test_tree_tests.sh
     - ./tests/test_tree_tests.sh -t
